turtleart.house.House.scala.error
Compilation error:
House:8: error: overloaded method value forward with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  right(30); forward(100);right(120);forward();right(30);forward(100);right(90);forward(100);right(90)
                                     ^